# agi-bio

./: .gitignore  CMakeLists.txt  README.md  bio-utilities.scm
bioscience/: CMakeLists.txt  Dockerfile  Dockerfile_Eddie  README.md  bioscience.scm  fig.yml  opencog.conf
bioscience/cython/: CMakeLists.txt  bioscience.pyx
bioscience/types/: BioScienceTypes.cc  CMakeLists.txt  atom_types.script
eddie/visualizer-dev/: load-results.sh  visualizer-dev.scm
knowledge-import/: Aging-Mythelation.py  GO_Annotation_scm.py  GO_scm.py  Go_Annotation_scm.py  Go_Annotation_scm.py~  MSigDB_to_scheme.py  README.md  RulesOfTranslation.txt  SifToScheme.py  fix_obo.sh  lifeSpanObservation_2015.py  load_atoms.py  ontology_scm.py
knowledge-import/SNET/: GO_Annotation_scm.py  GO_scm.py  Physical Entity (PE) Identifier mapping.py  Readme.md  SMPDB_pathway.py  biogrid.py  biogrid_gene2uniprot.py  biogrid_genes2id.py  codingRNA.py  gene2proteinIDs.R  gene2proteinMapping.py  go-plus.py  metadata.py  noncodingRNA.py  reactome_pathway.py  string_PPI.py  uniprot2GO.py  uniprotIDmap.R
knowledge-import/SNET/current/: atomese_translation.md
knowledge-import/SNET/dataset/: meta.json
knowledge-import/SNET/raw_data/: entrez2uniprot.csv  uniprot2biogrid.csv
knowledge-import/SNET/sheme2csv/: sample.csv  sample.scm  sample.sif  scm2sif.py  scm2table.py
knowledge-import/obsolete/: Aging-Mythelation.py  GO_Annotation_scm.py  GO_scm.py  MSigDB_to_scheme.py  lifeSpanObservation_2015.py  lifespan_observation_to_human_homologue.R  load_atoms.py
knowledge-import/parse-owl/: Readme  owl2atomese.py
lib/: FindAtomSpace.cmake
moses-scripts/: FitnessFunctions.md  README.md  common.sh  export_models.md  export_models_and_fitness.sh  relate_features_and_genes.sh  settings.sh  test.sh
moses-scripts/obsolete/: models.scm  models_10l.scm  moses.sh  process_Rdata.sh  test.sh
moses-scripts/scm-examples/: models_100l.scm
reasoning/simple-by-hand/: background-knowledge-full.scm  background-knowledge.scm  background-knowledge.scm.old  cog-create-intensional-links.scm  cog-create-intensional-similarity-link.scm  load-biospace.scm  load-reduced-biospace.scm  pln-config.scm  reduced-biospace-LY96-TBK1.scm  reduced-biospace.scm  reload-and-simple-inference-full.scm  simple-inference-full.scm  simple-inference-old.scm  simple-inference.scm  substitute.scm  utilities.scm
reasoning/simple-by-hand/local-rules/: equivalence-subset-substitution-rule.scm  equivalence-transformation-rule.scm  gene-similarity2overexpression-equivalence-rule.scm  implication-conversion-rule.scm  intensional-similarity-direct-evaluation-rule.scm  member-to-subset.scm  rule-helpers.scm  singleton-similarity-rule.scm  subset-direct-evaluation-rule.scm
reasoning/simple-by-hand/local_rules/: member-to-subset.scm  subset-direct-evaluation-rule.scm
reduced-atomspaces/: reduced-atomspace.scm
relationship-mining/: README.md  bio.py  bio_scheme.scm  graph.py  reasoner.py  subgraph.py  utilities.py
relationship-mining/obsolete/: README.md  __init__.py  bio.py  bio_scheme.scm
relationship-mining/scheme/: SUBGRAPH_100_GO.scm  SUBGRAPH_10K_GO.scm  SUBGRAPH_1K_GO.scm  subgraph_100.scm  subgraph_100_GO.scm  subgraph_10K.scm  subgraph_10K_GO.scm  subgraph_1K.scm  subgraph_1K_GO.scm  subgraph_500.scm
scheme-representation/: Lifespan-observations_2015-02-21.scm  README.md  load-scheme-representation.sh  mmc4.scm  oldoffvscontrol-features-and-genes.scm  oldoffvscontrol-models-and-fitness.scm  oldvscontrol-features-and-genes.scm  oldvscontrol-models-and-fitness.scm  super_centenarian_snp.scm
